# meson-example-skeleton

./: README.md  meson.build
MyExe/: meson.build
MyExe/src/: main.cpp
MyLib/: meson.build
MyLib/include/: mylib.hpp
MyLib/src/: PrivateHelper.cpp  PrivateHelper.hpp  mylib.cpp
MyLib/test/: tst_PrivateHelper.cpp  tst_mylib.cpp
